--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -10,56 +10,64 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
     <children>
-        <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #FAE5D3;">
+        <AnchorPane prefHeight="800.0" prefWidth="289.0" style="-fx-background-color: #FAE5D3;">
             <children>
-                <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="25.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
-                    <image>
-                        <Image url="@../icecream.png" />
-                    </image>
-                </ImageView>
+            <ImageView fitHeight="242.0" fitWidth="281.0" layoutX="29.0" layoutY="288.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../icecream.png" />
+               </image>
+            </ImageView>
             </children>
         </AnchorPane>
-        <AnchorPane prefHeight="400.0" prefWidth="401.0">
+        <AnchorPane prefHeight="800.0" prefWidth="1023.0">
             <children>
-                <Label layoutX="35.0" layoutY="43.0" text="Fridge Storage Viewer">
+                <Label layoutX="68.0" layoutY="51.0" text="Fridge Storage Viewer">
+                    <font>
+                        <Font size="48.0" />
+                    </font>
+                </Label>
+                <Label layoutX="498.0" layoutY="121.0" text="Track what's in your fridge!">
+                    <font>
+                        <Font name="System Italic" size="36.0" />
+                    </font>
+                </Label>
+                <Label layoutX="205.0" layoutY="297.0" text="Username">
+                    <font>
+                        <Font size="36.0" />
+                    </font>
+                </Label>
+                <Label layoutX="205.0" layoutY="417.0" text="Password">
+                    <font>
+                        <Font size="36.0" />
+                    </font>
+                </Label>
+                <TextField fx:id="tf_username" layoutX="576.0" layoutY="285.0" promptText="Username">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </TextField>
+                <Button fx:id="btn_login" layoutX="405.0" layoutY="542.0" mnemonicParsing="false" style="-fx-background-color: #A3E4D7;" text="Login">
+                    <font>
+                        <Font size="36.0" />
+                    </font>
+                </Button>
+                <Label layoutX="232.0" layoutY="677.0" text="Do not have an account yet?">
                     <font>
                         <Font size="24.0" />
                     </font>
                 </Label>
-                <Label layoutX="152.0" layoutY="86.0" text="Track what's in your fridge!">
+                <Button fx:id="btn_singup" layoutX="576.0" layoutY="669.0" mnemonicParsing="false" text="Create account">
                     <font>
-                        <Font name="System Italic" size="18.0" />
-                    </font>
-                </Label>
-                <Label layoutX="48.0" layoutY="161.0" text="Username">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Label>
-                <Label layoutX="48.0" layoutY="220.0" text="Password">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="tf_username" layoutX="184.0" layoutY="163.0" promptText="Username" />
-                <Button fx:id="btn_login" layoutX="150.0" layoutY="267.0" mnemonicParsing="false" style="-fx-background-color: #A3E4D7;" text="Login">
-                    <font>
-                        <Font size="18.0" />
+                        <Font size="24.0" />
                     </font>
                 </Button>
-                <Label layoutX="35.0" layoutY="346.0" text="Do not have an account yet?">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Label>
-                <Button fx:id="btn_singup" layoutX="228.0" layoutY="340.0" mnemonicParsing="false" text="Create account">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Button>
-            <PasswordField fx:id="tf_password" layoutX="185.0" layoutY="221.0" promptText="Password" />
+            <PasswordField fx:id="tf_password" layoutX="576.0" layoutY="417.0" promptText="Password">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </PasswordField>
             </children>
         </AnchorPane>
     </children>
