--- a/src/sample/validate_results.fxml
+++ b/src/sample/validate_results.fxml
@@ -46,9 +46,9 @@
                   <Font size="24.0" />
                </font>
             </Label>
-            <TextField fx:id="tf_product_name" editable="false" layoutX="675.0" layoutY="182.0" maxWidth="1.7976931348623157E308">
+            <TextField fx:id="tf_product_name" editable="false" layoutX="671.0" layoutY="175.0" maxWidth="1.7976931348623157E308">
                <font>
-                  <Font size="14.0" />
+                  <Font size="18.0" />
                </font>
             </TextField>
             <ChoiceBox fx:id="choice_category" layoutX="675.0" layoutY="256.0" prefWidth="150.0" />
@@ -78,6 +78,16 @@
                   <Font size="24.0" />
                </font>
             </Button>
+            <Label layoutX="868.0" layoutY="255.0" text="manual category:">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="tf_manual_cat" layoutX="1021.0" layoutY="249.0">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </TextField>
          </children>
       </AnchorPane>
    </children>
