--- a/src/sample/logged-in.fxml
+++ b/src/sample/logged-in.fxml
@@ -33,13 +33,14 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="productView" editable="true" layoutX="43.0" layoutY="70.0" prefHeight="554.0" prefWidth="1167.0">
+                        <TableView fx:id="productView" editable="true" layoutX="81.0" layoutY="70.0" prefHeight="554.0" prefWidth="1104.0">
                           <columns>
-                            <TableColumn fx:id="tab_barcode" prefWidth="260.0" text="Barcode" />
-                            <TableColumn fx:id="tab_product_name" prefWidth="314.0" text="Product Name" />
-                              <TableColumn fx:id="tab_category" prefWidth="175.0" text="Category" />
-                              <TableColumn fx:id="tab_expiration_date" prefWidth="159.0" text="Expiaration Date" />
-                              <TableColumn fx:id="tab_num_items" prefWidth="148.0" text="Number of Items" />
+                            <TableColumn fx:id="tab_barcode" prefWidth="240.0" text="Barcode" />
+                            <TableColumn fx:id="tab_product_name" prefWidth="304.0" text="Product Name" />
+                              <TableColumn fx:id="tab_category" prefWidth="200.0" text="Category" />
+                              <TableColumn fx:id="tab_expiration_date" prefWidth="124.0" text="Expiaration Date" />
+                              <TableColumn fx:id="tab_num_items" prefWidth="143.0" text="Number of Items" />
+                              <TableColumn fx:id="tab_delete" prefWidth="92.0" text="Delete" />
                           </columns>
                         </TableView>
                         <Button fx:id="bt_delete_expired" layoutX="933.0" layoutY="23.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="239.0" style="-fx-background-color: #F5B7B1;" text="Delete All Expired Items" />
