--- a/src/sample/logged-in.fxml
+++ b/src/sample/logged-in.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -40,10 +42,10 @@
                               <TableColumn fx:id="tab_category" prefWidth="200.0" text="Category" />
                               <TableColumn fx:id="tab_expiration_date" prefWidth="124.0" text="Expiaration Date" />
                               <TableColumn fx:id="tab_num_items" prefWidth="143.0" text="Number of Items" />
-                              <TableColumn fx:id="tab_delete" prefWidth="92.0" text="Delete" />
+                              <TableColumn fx:id="tab_delete" prefWidth="92.0" style="-fx-alignment: CENTER;" text="Delete" />
                           </columns>
                         </TableView>
-                        <Button fx:id="bt_delete_expired" layoutX="933.0" layoutY="23.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="239.0" style="-fx-background-color: #F5B7B1;" text="Delete All Expired Items" />
+                        <Button fx:id="bt_delete_expired" layoutX="933.0" layoutY="23.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="239.0" style="-fx-background-color: #F5B7B1;" stylesheets="@style_sheet.css" text="Delete All Expired Items" />
                      </children></AnchorPane>
             </content>
           </Tab>
@@ -82,7 +84,71 @@
           </Tab>
             <Tab fx:id="add_new_manual" text="Manualy add new items">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="244.0" layoutY="115.0" text="Barcode">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="244.0" layoutY="184.0" text="Product Name">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="245.0" layoutY="250.0" text="Category">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="247.0" layoutY="315.0" text="Number of items">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="247.0" layoutY="381.0" text="Expiration date">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="tf_barcode_man" layoutX="487.0" layoutY="107.0" promptText="Leave blank if missing">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="tf_product_name_man" layoutX="487.0" layoutY="182.0">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <TextField fx:id="tf_man_category_man" layoutX="937.0" layoutY="248.0">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <ComboBox fx:id="combo_category_man" layoutX="488.0" layoutY="250.0" prefHeight="30.0" prefWidth="220.0" />
+                        <Spinner fx:id="number_item_man" layoutX="487.0" layoutY="317.0" prefHeight="30.0" prefWidth="220.0" />
+                        <TextField fx:id="tf_expiration_date_man" layoutX="485.0" layoutY="377.0">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </TextField>
+                        <Label layoutX="771.0" layoutY="255.0" text="manual category:">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="btn_save" layoutX="579.0" layoutY="481.0" mnemonicParsing="false" style="-fx-background-color: #A3E4D7;" text="Save">
+                           <font>
+                              <Font size="36.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="btn_search_barcode" layoutX="770.0" layoutY="178.0" mnemonicParsing="false" text="Search barcode">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                     </children></AnchorPane>
                </content>
             </Tab>
         </tabs>
