--- a/src/sample/logged-in.fxml
+++ b/src/sample/logged-in.fxml
@@ -143,7 +143,7 @@
                               <Font size="36.0" />
                            </font>
                         </Button>
-                        <Button fx:id="btn_search_barcode" layoutX="770.0" layoutY="178.0" mnemonicParsing="false" text="Search barcode">
+                        <Button fx:id="btn_search_barcode" accessibleHelp="Search barcode via product name." accessibleText="Search barcode via product name." layoutX="770.0" layoutY="182.0" mnemonicParsing="false" text="Search barcode">
                            <font>
                               <Font size="18.0" />
                            </font>
