--- a/src/sample/logged-in.fxml
+++ b/src/sample/logged-in.fxml
@@ -151,6 +151,35 @@
                      </children></AnchorPane>
                </content>
             </Tab>
+            <Tab fx:id="add_new_manual1" text="Invoice items">
+               <content>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="299.0" layoutY="137.0" text="Invoice from">
+                           <font>
+                              <Font size="36.0" />
+                           </font>
+                        </Label>
+                        <ComboBox fx:id="combo_store_selection" layoutX="555.0" layoutY="149.0" prefHeight="30.0" prefWidth="220.0" />
+                        <Label layoutX="299.0" layoutY="228.0" text="Select file">
+                           <font>
+                              <Font size="36.0" />
+                           </font>
+                        </Label>
+                        <Button fx:id="btn_invoice_upload" layoutX="570.0" layoutY="402.0" mnemonicParsing="false" style="-fx-background-color: #A3E4D7;" text="Upload">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Button>
+                        <Button fx:id="btn_choose_file" layoutX="805.0" layoutY="228.0" mnemonicParsing="false" text="Choose file">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
         </tabs>
       </TabPane>
    </children>
